--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.5-Alpha1
	- Fixed prevent_multiple_logins, preventing all logins (Thx hugh)
	- Fixed Export catalog headers so it corretly prompts you to download
		the file
	- Add ability to sort by artist name, album name on song browse
	- Implemented caching on artist and album browse, added total
		artist time to the many artist view
	- Fixed test config page so it bounces you back to the test page
		if the config starts parsing correctly
	- Fixed browsing so that you can browse two different types in two 
		windows at the same time 
	- Improved gather script for translations (Thx momo-i)
	- Added paging to the localplay playlist
	- Updated German Translation (Thx Laurent)
	- Fixed issue where Remote songs would never be removed from
		the democratic playlist
	- Fixed issue where user preferences weren't set correctly
		on stream (Thx lorijho)
	- Added caching of user preferences to avoid a SQL query on load
		(Thx Protagonist)
	- Fixed home menu not always displaying the entire contents
	- Fixed logic error with duplicate login setting which caused it
		to only work if mysql auth was used
	- Changed Passwords to SHA1 will prompt to reset password
        - Corrected some translation strings and added jp_JP (Thx momo-i)
	- Ignore filenames that start with . (hidden) solves an issue
		with mac filesystems
	- Fix tracking of stats for downloaded songs 
	- Fix divide by 0 error during transcode in some configurations
	- Remove root mysql pw requirement from installer
	- Added Image Dimensions on Find Album Art page
	- Added Confirmation Screen to Catalog Deletion
	- Reorganized Menu System and Added Modules section